bug 522779: use nsTArray::Contains() instead of checking nsTArray::IndexOf() against various sentinel values, in three places in layout. r=dbaron